# sabi-rust

./: Cargo.toml  README.md  build.sh
.github/workflows/: rust.yml
src/: async_group.rs  data_acc.rs  data_conn.rs  data_hub.rs  data_src.rs  dax_conn.rs  dax_src.rs  err.rs  errors.rs  errs.rs  lib.rs  non_null.rs  txn_failure.rs
src/data_src/: global_setup.rs  mod.rs
src/dax/: base.rs  mod.rs
src/err/: mod.rs  notify.rs
src/tokio/: async_group.rs  data_acc.rs  data_conn.rs  data_hub.rs  mod.rs
src/tokio/data_src/: global_setup.rs  mod.rs
tests/: async_group_tests.rs  errs_test.rs  run_async_tests.rs  run_tests.rs  sabi_test.rs  txn_async_tests.rs  txn_tests.rs  uses_and_setup_async_in_static_tests.rs  uses_and_setup_in_func_tests.rs  uses_and_setup_in_static_tests.rs  uses_async_and_setup_async_in_func_tests.rs
tests/compile_errors/: lifetime_of_reason_in_dropped_errs.rs  lifetime_of_reason_in_dropped_errs.stderr  lifetime_of_returned_reason_in_errs.rs  lifetime_of_returned_reason_in_errs.stderr
