[package]
name = "sabi-rust"
version = "0.4.0"
authors = ["Takayuki Sato <sttk.xslet@gmail.com>"]
edition = "2021"
rust-version = "1.85.1"
description = "A small framework to separate logics and data accesses for Rust application."
documentation = "https://docs.rs/sabi-rust"
readme = "README.md"
repository = "https://github.com/sttk/sabi-rust"
license = "MIT"
keywords = ["framework", "logic", "separation", "transaction"]
categories = []

[lib]
name = "sabi"

[dependencies]
errs = "0.3"
futures = "0.3"
tokio = "1"

[dev-dependencies]
trybuild = "1"
override_macro = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
