[package]
name = "sabi-rust"
version = "0.5.0"
authors = ["Takayuki Sato <sttk.xslet@gmail.com>"]
edition = "2021"
rust-version = "1.87.0"
description = "A small framework to separate logics and data accesses for Rust application."
documentation = "https://docs.rs/sabi-rust"
readme = "README.md"
repository = "https://github.com/sttk/sabi-rust"
license = "MIT"
keywords = ["framework", "logic", "separation", "transaction"]
categories = ["rust-patterns", "development-tools", "asynchronous"]

[lib]
name = "sabi"

[dependencies]
errs = "0.8"
setup_read_cleanup = "0.6"
inventory = "0.3"

[dev-dependencies]
trybuild = "1"
override_macro = "0.1"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
